--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#151515</color>
     <color name="white">#FFFFFFFF</color>
     <color name="tone_blue">#3D6F96</color>
     <color name="light_blue">#619DF8</color>
+    <color name="light_grey">#D1D1D1</color>
+    <color name="dim_grey">#696969</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
