--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -106,7 +106,6 @@
             android:id="@+id/etPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_visibility_off"
             android:inputType="textPassword"
             android:padding="15dp"
             android:layout_marginStart="14dp"
@@ -116,6 +115,17 @@
             app:layout_constraintTop_toBottomOf="@id/tvPassword"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivTogglePassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_visibility_off"
+            android:contentDescription="@string/toggle_password"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="@id/etPassword"
+            app:layout_constraintTop_toTopOf="@id/etPassword"
+            app:layout_constraintBottom_toBottomOf="@id/etPassword" />
 
         <TextView
             android:id="@+id/tvRePassword"
@@ -140,13 +150,23 @@
             android:padding="15dp"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="14dp"
-            android:drawableEnd="@drawable/ic_visibility_off"
             android:background="@drawable/custom_input"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/tvRePassword"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+
+        <ImageView
+            android:id="@+id/ivToggleRePassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_visibility_off"
+            android:contentDescription="@string/toggle_password"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="@id/etRePassword"
+            app:layout_constraintTop_toTopOf="@id/etRePassword"
+            app:layout_constraintBottom_toBottomOf="@id/etRePassword" />
 
         <Button
             android:id="@+id/btnLogin"
@@ -160,7 +180,7 @@
             android:layout_marginEnd="14dp"
             android:background="@drawable/custom_button"
             android:layout_marginTop="55dp"
-            app:layout_constraintTop_toBottomOf="@+id/etRePassword"
+            app:layout_constraintTop_toBottomOf="@+id/ivToggleRePassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
