--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,35 +37,47 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loginTitle" />
 
+        <!-- Label untuk Username -->
         <TextView
-            android:id="@+id/tvUsername"
+            android:id="@+id/tvEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/input_font"
             android:textSize="16sp"
-            android:text="@string/text_username"
+            android:text="@string/text_email"
             android:layout_marginTop="18dp"
             android:layout_marginEnd="14dp"
             android:layout_marginStart="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/login_img"
-            app:layout_constraintBottom_toTopOf="@id/etUsername"
+            app:layout_constraintTop_toBottomOf="@id/login_img"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/etUsername"
+        <!-- TextInputLayout untuk Username -->
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
+            android:id="@+id/emailInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:padding="15dp"
-            android:background="@drawable/custom_input"
+            app:helperTextTextColor="@android:color/holo_red_dark"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="14dp"
-            android:layout_marginTop="8dp"
-            android:focusableInTouchMode="true"
-            app:layout_constraintTop_toBottomOf="@id/tvUsername"
+            app:layout_constraintTop_toBottomOf="@id/tvEmail"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:boxStrokeColor="@color/dim_grey"
+            app:boxStrokeWidth="1.5dp"
+            app:boxCornerRadiusTopStart="17dp"
+            app:boxCornerRadiusTopEnd="17dp"
+            app:boxCornerRadiusBottomStart="17dp"
+            app:boxCornerRadiusBottomEnd="17dp"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/tvPassword"
@@ -74,38 +86,40 @@
             android:fontFamily="@font/input_font"
             android:textSize="16sp"
             android:text="@string/text_password"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="18dp"
             android:layout_marginEnd="14dp"
             android:layout_marginStart="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/etUsername"
-            app:layout_constraintBottom_toTopOf="@id/etPassword"
+            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/etPassword"
+        <!-- Password -->
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
+            android:id="@+id/passwordInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:padding="15dp"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="14dp"
-            android:background="@drawable/custom_input"
-            android:layout_marginTop="8dp"
+            app:helperTextTextColor="@android:color/holo_red_dark"
+            app:passwordToggleEnabled="true"
             app:layout_constraintTop_toBottomOf="@id/tvPassword"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:boxStrokeColor="@color/dim_grey"
+            app:boxStrokeWidth="1.5dp"
+            app:boxCornerRadiusTopStart="17dp"
+            app:boxCornerRadiusTopEnd="17dp"
+            app:boxCornerRadiusBottomStart="17dp"
+            app:boxCornerRadiusBottomEnd="17dp"
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-            android:id="@+id/ivTogglePassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_visibility_off"
-            android:contentDescription="@string/toggle_password"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintEnd_toEndOf="@id/etPassword"
-            app:layout_constraintTop_toTopOf="@id/etPassword"
-            app:layout_constraintBottom_toBottomOf="@id/etPassword" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btnLogin"
@@ -119,7 +133,7 @@
             android:layout_marginEnd="14dp"
             android:background="@drawable/custom_button"
             android:layout_marginTop="55dp"
-            app:layout_constraintTop_toBottomOf="@+id/ivTogglePassword"
+            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
