--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,6 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.358" />
+
         <TextView
             android:id="@+id/registerTitle"
             android:layout_width="match_parent"
@@ -26,7 +39,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-
+        <!-- Label untuk Username -->
         <TextView
             android:id="@+id/tvUsername"
             android:layout_width="match_parent"
@@ -37,25 +50,36 @@
             android:layout_marginTop="18dp"
             android:layout_marginEnd="14dp"
             android:layout_marginStart="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/registerTitle"
-            app:layout_constraintBottom_toTopOf="@id/etUsername"
+            app:layout_constraintTop_toBottomOf="@id/registerTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/etUsername"
+        <!-- TextInputLayout untuk Username -->
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
+            android:id="@+id/usernameInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:padding="15dp"
-            android:background="@drawable/custom_input"
+            app:helperTextTextColor="@android:color/holo_red_dark"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="14dp"
-            android:layout_marginTop="8dp"
-            android:focusableInTouchMode="true"
             app:layout_constraintTop_toBottomOf="@id/tvUsername"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:boxStrokeColor="@color/dim_grey"
+            app:boxStrokeWidth="1.5dp"
+            app:boxCornerRadiusTopStart="17dp"
+            app:boxCornerRadiusTopEnd="17dp"
+            app:boxCornerRadiusBottomStart="17dp"
+            app:boxCornerRadiusBottomEnd="17dp"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:inputType="textPersonName" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/tvEmail"
@@ -67,25 +91,36 @@
             android:layout_marginTop="18dp"
             android:layout_marginEnd="14dp"
             android:layout_marginStart="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/etUsername"
-            app:layout_constraintBottom_toTopOf="@id/etEmail"
+            app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/etEmail"
+        <!-- Email -->
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
+            android:id="@+id/emailInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:padding="15dp"
-            android:background="@drawable/custom_input"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="14dp"
-            android:layout_marginTop="8dp"
-            android:focusableInTouchMode="true"
+            app:helperTextTextColor="@android:color/holo_red_dark"
             app:layout_constraintTop_toBottomOf="@id/tvEmail"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:boxStrokeColor="@color/dim_grey"
+            app:boxStrokeWidth="1.5dp"
+            app:boxCornerRadiusTopStart="17dp"
+            app:boxCornerRadiusTopEnd="17dp"
+            app:boxCornerRadiusBottomStart="17dp"
+            app:boxCornerRadiusBottomEnd="17dp"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/tvPassword"
@@ -94,38 +129,40 @@
             android:fontFamily="@font/input_font"
             android:textSize="16sp"
             android:text="@string/text_password"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="18dp"
             android:layout_marginEnd="14dp"
             android:layout_marginStart="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/etEmail"
-            app:layout_constraintBottom_toTopOf="@id/etPassword"
+            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/etPassword"
+        <!-- Password -->
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
+            android:id="@+id/passwordInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:padding="15dp"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="14dp"
-            android:background="@drawable/custom_input"
-            android:layout_marginTop="8dp"
+            app:helperTextTextColor="@android:color/holo_red_dark"
+            app:passwordToggleEnabled="true"
             app:layout_constraintTop_toBottomOf="@id/tvPassword"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:boxStrokeColor="@color/dim_grey"
+            app:boxStrokeWidth="1.5dp"
+            app:boxCornerRadiusTopStart="17dp"
+            app:boxCornerRadiusTopEnd="17dp"
+            app:boxCornerRadiusBottomStart="17dp"
+            app:boxCornerRadiusBottomEnd="17dp"
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-            android:id="@+id/ivTogglePassword"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_visibility_off"
-            android:contentDescription="@string/toggle_password"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintEnd_toEndOf="@id/etPassword"
-            app:layout_constraintTop_toTopOf="@id/etPassword"
-            app:layout_constraintBottom_toBottomOf="@id/etPassword" />
+            android:lines="1"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/tvRePassword"
@@ -134,40 +171,42 @@
             android:fontFamily="@font/input_font"
             android:textSize="16sp"
             android:text="@string/text_confirm_password"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="18dp"
             android:layout_marginEnd="14dp"
             android:layout_marginStart="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/etPassword"
-            app:layout_constraintBottom_toTopOf="@id/etRePassword"
+            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
+    <!-- Confirm Password -->
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
+        android:id="@+id/rePasswordInputLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="14dp"
+        app:helperTextTextColor="@android:color/holo_red_dark"
+        app:passwordToggleEnabled="true"
+        app:layout_constraintTop_toBottomOf="@id/tvRePassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:boxStrokeColor="@color/dim_grey"
+        app:boxStrokeWidth="1.5dp"
+        app:boxCornerRadiusTopStart="17dp"
+        app:boxCornerRadiusTopEnd="17dp"
+        app:boxCornerRadiusBottomStart="17dp"
+        app:boxCornerRadiusBottomEnd="17dp"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etRePassword"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:padding="15dp"
-            android:layout_marginStart="14dp"
-            android:layout_marginEnd="14dp"
-            android:background="@drawable/custom_input"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tvRePassword"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:lines="1"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-
-        <ImageView
-            android:id="@+id/ivToggleRePassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_visibility_off"
-            android:contentDescription="@string/toggle_password"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintEnd_toEndOf="@id/etRePassword"
-            app:layout_constraintTop_toTopOf="@id/etRePassword"
-            app:layout_constraintBottom_toBottomOf="@id/etRePassword" />
-
+        <!-- Sign Up Button -->
         <Button
             android:id="@+id/btnSignUp"
             android:layout_width="match_parent"
@@ -180,7 +219,7 @@
             android:layout_marginEnd="14dp"
             android:background="@drawable/custom_button"
             android:layout_marginTop="55dp"
-            app:layout_constraintTop_toBottomOf="@+id/ivToggleRePassword"
+            app:layout_constraintTop_toBottomOf="@id/rePasswordInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -215,5 +254,6 @@
                 android:clickable="true"
                 android:focusable="true" />
         </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
