--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
          <item name="colorPrimary">@color/black</item>
          <item name="colorPrimaryVariant">@color/transparent</item>
+         <item name="boxStrokeErrorColor">@android:color/holo_red_dark</item>
     </style>
 
     <style name="Theme.CulTourApp" parent="Base.Theme.CulTourApp" />
