--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -19,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:queryHint="search..."
+        app:queryHint="@string/search_hint"
         app:searchHintIcon="@null"
         app:searchIcon="@drawable/baseline_search_24" />
 
@@ -27,8 +34,8 @@
         android:id="@+id/tvHello"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvWeatherInfo"
+        app:layout_constraintBottom_toTopOf="@id/btnLogout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
@@ -49,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:hint="Start Date"
+        android:hint="@string/start_date_text"
         android:focusable="false"
         android:drawableEnd="@drawable/baseline_calendar_month_24"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,44 +67,47 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:hint="End Date"
+        android:hint="@string/end_date_text"
         android:focusable="false"
         android:drawableEnd="@drawable/baseline_calendar_month_24"
         android:src="@drawable/baseline_calendar_month_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/etStartDate" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/tvWeatherInfo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:background="@drawable/rounded_background"
-        android:padding="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etStartDate">
-
-        <TextView
-            android:id="@+id/tvWeatherText"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/tvWeatherInfo"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="In the whole range of the date, the weather will be Partly Rainy"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toTopOf="@id/ivWeatherIcon"
+            android:layout_height="200dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/rounded_background"
+            android:padding="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/etStartDate">
 
-        <ImageView
-            android:id="@+id/ivWeatherIcon"
-            android:layout_width="94dp"
-            android:layout_height="54dp"
-            android:src="@drawable/ic_cloudy"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/tvWeatherText"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                tools:text="@string/dummy_text"
+                android:textColor="@color/black"
+                android:visibility="gone"
+                android:fontFamily="@font/poppins_bold"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toTopOf="@id/ivWeatherIcon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:id="@+id/ivWeatherIcon"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                tools:src="@drawable/ic_cloudy"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
