--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#151515</color>
+    <color name="dark_liver">#817A7A</color>
     <color name="white">#FFFFFFFF</color>
     <color name="tone_blue">#3D6F96</color>
     <color name="light_blue">#619DF8</color>
