finished weather and chatbot

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,6 +12,21 @@
         android:layout_height="wrap_content"
         tools:context=".view.HomeActivity">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:visibility="gone"
+            android:indeterminate="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.409" />
+
         <ImageView
             android:id="@+id/ivLogout"
             android:layout_width="35dp"
@@ -131,6 +146,7 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/text_bg"
                 android:padding="12dp"
+                android:fontFamily="@font/input_font"
                 android:text="@string/welcome_chatbot"
                 android:textColor="@color/black"
                 android:autoLink="web"
@@ -158,9 +174,9 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/text_bg"
+                android:fontFamily="@font/input_font"
                 android:visibility="gone"
                 android:padding="12dp"
-                android:text="@string/chatbot_url_text"
                 android:textColor="@color/black"
                 android:autoLink="web"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -187,9 +203,9 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/text_bg"
+                android:fontFamily="@font/input_font"
                 android:visibility="gone"
                 android:padding="12dp"
-                android:text="@string/chatbot_response_text"
                 android:textColor="@color/black"
                 android:autoLink="web"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -217,8 +233,8 @@
                 android:layout_marginTop="20dp"
                 android:visibility="gone"
                 android:background="@drawable/text_bg"
+                android:fontFamily="@font/input_font"
                 android:padding="12dp"
-                android:text="@string/chatbot_norm_text"
                 android:textColor="@color/black"
                 android:autoLink="web"
                 app:layout_constraintEnd_toEndOf="parent"
